*WIP - generated rest client for keycloak - doesn't compile